welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value baiseBrosse
     	baiseBrosse();
        ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
     	avance();
              ^SlugTracking:17: error: not found: value baiseBrosse
     	baiseBrosse();
        ^SlugTracking:30: error: not found: value baiseBrosse
     	baiseBrosse();
        ^SlugTracking:28: error: type mismatch;
 found   : Unit
 required: Boolean
     if(getCouleurSol()==Color.green){
     ^